--- a/hacking with Fred.ipynb
+++ b/hacking with Fred.ipynb
@@ -309,6 +309,83 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Snippet provided by teachable machine"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:No training configuration found in save file: the model was *not* compiled. Compile it manually.\n",
+      "[[0.7580857  0.01895772 0.22295661]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow.keras\n",
+    "from PIL import Image, ImageOps\n",
+    "import numpy as np\n",
+    "\n",
+    "# Disable scientific notation for clarity\n",
+    "np.set_printoptions(suppress=True)\n",
+    "\n",
+    "# Load the model\n",
+    "model = tensorflow.keras.models.load_model('teachable_machine/keras_model.h5')\n",
+    "\n",
+    "# Create the array of the right shape to feed into the keras model\n",
+    "# The 'length' or number of images you can put into the array is\n",
+    "# determined by the first position in the shape tuple, in this case 1.\n",
+    "data = np.ndarray(shape=(1, 224, 224, 3), dtype=np.float32)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.9026489  0.00082689 0.09652413]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Replace this with the path to your image\n",
+    "image = Image.open('saved_images/bear-in-wohnzimmer.jpeg')\n",
+    "\n",
+    "#resize the image to a 224x224 with the same strategy as in TM2:\n",
+    "#resizing the image to be at least 224x224 and then cropping from the center\n",
+    "size = (224, 224)\n",
+    "image = ImageOps.fit(image, size, Image.ANTIALIAS)\n",
+    "\n",
+    "#turn the image into a numpy array\n",
+    "image_array = np.asarray(image)\n",
+    "\n",
+    "# display the resized image\n",
+    "image.show()\n",
+    "\n",
+    "# Normalize the image\n",
+    "normalized_image_array = (image_array.astype(np.float32) / 127.0) - 1\n",
+    "\n",
+    "# Load the image into the array\n",
+    "data[0] = normalized_image_array\n",
+    "\n",
+    "# run the inference\n",
+    "prediction = model.predict(data)\n",
+    "print(prediction)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
