Added a sample video

--- a/hacking with Fred.ipynb
+++ b/hacking with Fred.ipynb
@@ -124,7 +124,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f16a87b3208>"
+       "<matplotlib.image.AxesImage at 0x7fbacc2b2198>"
       ]
      },
      "execution_count": 4,
@@ -189,7 +189,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f16a8286f60>"
+       "<matplotlib.image.AxesImage at 0x7fbab4353080>"
       ]
      },
      "execution_count": 6,
@@ -379,11 +379,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Another cool thing\n",
-    "* Upload and download images in the cloud\n",
-    "* Process an entire video\n",
-    "* Train a head on top of the detector to detect custom objects. \n",
-    "* Use an actual webcam\n"
+    "## Process an entire video"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Can't receive frame (stream end?). Exiting ...\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import cv2 as cv\n",
+    "cap = cv.VideoCapture('input_files/IMG_1010.MOV')\n",
+    "while cap.isOpened():\n",
+    "    ret, frame_bgr = cap.read()\n",
+    "\n",
+    "    # if frame is read correctly ret is True\n",
+    "    if not ret:\n",
+    "        print(\"Can't receive frame (stream end?). Exiting ...\")\n",
+    "        break    \n",
+    "        \n",
+    "    frame_rgb = cv2.cvtColor(frame_bgr, cv2.COLOR_BGR2RGB)\n",
+    "    frame_rgb = cv2.resize(frame_rgb, dsize=(640, 480))\n",
+    "\n",
+    "    output_image_rgb, detections = detector.detectObjectsFromImage(input_image=frame_rgb, input_type='array', output_type='array', minimum_percentage_probability=50)\n",
+    "    output_image_bgr = cv2.cvtColor(output_image_rgb, cv2.COLOR_RGB2BGR)\n",
+    "\n",
+    "    for eachObject in detections: \n",
+    "#         print(eachObject[\"name\"], eachObject[\"percentage_probability\"])\n",
+    "        cv2.imwrite(\"saved_images/\"+eachObject[\"name\"]+\".jpg\", output_image_bgr)\n",
+    "    \n",
+    "#     plt.figure(figsize=(10,10))\n",
+    "#     plt.imshow(output_image_rgb)\n",
+    "#     plt.show()\n",
+    "\n",
+    "cap.release()\n",
+    "\n"
    ]
   },
   {
@@ -391,7 +432,24 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "query = input(\"Welcome to the search engine. What are you searching?\")\n",
+    "# query = \"chair\"\n",
+    "print(\"Thank you, searching for\", query)\n",
+    "image_bgr = cv2.imread(\"saved_images/\"+query+\".jpg\")\n",
+    "image_rgb = cv2.cvtColor(image_bgr, cv2.COLOR_BGR2RGB)\n",
+    "plt.imshow(image_rgb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Another cool thing\n",
+    "* Upload and download images in the cloud\n",
+    "* Train a head on top of the detector to detect custom objects. \n",
+    "* Use an actual webcam\n"
+   ]
   }
  ],
  "metadata": {
